--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.9.0",
     "i18next": "^25.0.2",
     "i18next-browser-languagedetector": "^8.1.0",
+    "lucide-react": "^0.507.0",
     "process": "^0.11.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
