--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "i18next": "^25.0.2",
     "i18next-browser-languagedetector": "^8.1.0",
     "lucide-react": "^0.507.0",
+    "moment": "^2.30.1",
     "process": "^0.11.10",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.18.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.5.1",
     "react-router-dom": "^7.5.3"
@@ -27,6 +29,7 @@
     "@types/i18next": "^12.1.0",
     "@types/node": "^22.15.3",
     "@types/react": "^19.0.10",
+    "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^19.0.4",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.4",
