--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.5",
     "@tailwindcss/vite": "^4.1.5",
+    "@types/file-saver": "^2.0.7",
+    "@types/jspdf": "^1.3.3",
     "axios": "^1.9.0",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "i18next": "^25.0.2",
     "i18next-browser-languagedetector": "^8.1.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.507.0",
     "moment": "^2.30.1",
     "process": "^0.11.10",
@@ -22,7 +28,8 @@
     "react-big-calendar": "^1.18.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.5.1",
-    "react-router-dom": "^7.5.3"
+    "react-router-dom": "^7.5.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
